--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mongoose": "3.0.3",
     "gzippo": "0.1.7",
     "ws": "0.4.27",
-    "ws-rpc": "0.0.8"
+    "ws-rpc": "0.0.8",
+    "superagent": "0.15.4",
+    "underscore": "1.5.2"
   }
 }
