--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "ws-rpc": "0.0.8",
     "superagent": "0.15.4",
     "underscore": "1.5.2",
-    "date-utils": "1.2.14"
+    "date-utils": "1.2.14",
+    "elasticsearchclient": "git+https://github.com/santiago/node-elasticsearch-client.git"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
